# tui_form_widget

./: Cargo.toml  README.md
examples/: minimal.rs
src/: form.rs  lib.rs  widget.rs
